@@ -1,2 +1,11 @@
+Makefile.in
+Makefile
 *.o
+*~
+*.a
+*.la
+*.lo
+.deps
+.libs
+ucxt
 *.BKP
