@@ -1,0 +1,15 @@
+INCLUDES = -I../include \
+	$(INCDIRS) $(DEBUG_FLAGS) $(CPPFLAGS)
+
+ucxt_SOURCES = \
+	opcodec_.cc \
+	opcodes.cc \
+	printucc.cc \
+	stacki.cc \
+	ucdata.cc \
+	ucdump.cc \
+	ucfunc.cc
+
+if BUILD_TOOLS
+bin_PROGRAMS = ucxt
+endif
